Fixed bug in menu on small screens

--- a/public/assets/css/site.css
+++ b/public/assets/css/site.css
@@ -1,8 +1,5 @@
 /* Changes to the by default template */
-.row {
-  margin-right: 15px;
-  margin-left: 15px;
-}
+
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (min-width : 769px) {
